// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-s84f1t-0 bTVVuM"
>
  <h1
    class="profiles__Title-sc-s84f1t-1 typPE"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-s84f1t-2 dhiKdH"
  >
    <li
      class="profiles__Item-sc-s84f1t-5 ldUKZx"
    >
      <img
        class="profiles__Picture-sc-s84f1t-4 bteofA"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-s84f1t-3 lkBkbP"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-s84f1t-0 bTVVuM"
>
  <h1
    class="profiles__Title-sc-s84f1t-1 typPE"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-s84f1t-2 dhiKdH"
  >
    <li
      class="profiles__Item-sc-s84f1t-5 ldUKZx"
    >
      <img
        class="profiles__Picture-sc-s84f1t-4 bteofA"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-s84f1t-3 lkBkbP"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
